@@ -1,4 +1,5 @@
 # edit the lines below to your liking
+# $Header$
 
 # mode - 0 for text, 1 for menu (support incomplete)
 # note that you need dev-util/dialog installed
