@@ -290,3 +290,5 @@ Achim Gottinger <achim@gentoo.org>
 Nicholas Jones <carpaski@gentoo.org>
 .br 
 Phil Bordelon <sunflare@gentoo.org>
+.SH "CVS HEADER"
+$Header$
