@@ -20,3 +20,5 @@ Daniel Robbins <drobbins@gentoo.org>
 Please report bugs via http://bugs.gentoo.org/
 .SH "SEE ALSO"
 .BR emerge (1)
+.SH "CVS HEADER"
+$Header$
