@@ -28,3 +28,5 @@ Please report bugs via http://bugs.gentoo.org/
 .BR make.conf (5)
 .TP
 The \fI/usr/sbin/lintool\fR script. 
+.SH "CVS HEADER"
+$Header$
