@@ -2,7 +2,6 @@
 # Copyright 1998-2002 Daniel Robbins, Gentoo Technologies, Inc.
 # Distributed under the GNU Public License v2
 # $Header$
-# $Id$
 
 VERSION="2.0.47-r1"
 
